# grasping_pipeline_msgs

./: CMakeLists.txt  package.xml
action/: ExecuteGrasp.action  FindGrasppoint.action  Place.action  VOSVSGrasp.action
msg/: BoundingBox3DStamped.msg
srv/: CallDirectGraspPoseEstimator.srv  CallObjectDetector.srv  CallPoseEstimator.srv  FetchImages.srv
