<?xml version="1.0"?>
<package format="2">
  <name>grasping_pipeline_msgs</name>
  <version>0.0.0</version>
  <description>The grasping_pipeline_msgs package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>



  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>action_lib_msgs</build_depend>
  <depend>action_lib</depend>
  <build_depend>table_plane_extractor</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
